--- a/style.css
+++ b/style.css
@@ -17,10 +17,20 @@ h1 {
   margin: 0%;
 }
 
-nav a {
+header a {
   color: ffffff;
+  text-decoration: none;
+}
+
+header nav a {
+  color: ffffff;
+  text-decoration: none;
+  justify-content: space-evenly;
   margin-left: 15px;
-  font-size: 15px;
+}
+
+#intro {
+  background-color: #ffffff;
   text-align: center;
-  display: inline-block;
+  padding: 100px 20px;
 }/*# sourceMappingURL=style.css.map */
